Add TimeRangeFilter to filter out SSTables outside given time window